--- a/Week-3/Day-2/task-management-api-totd/.env.development
+++ b/Week-3/Day-2/task-management-api-totd/.env.development
@@ -1,7 +1,7 @@
 DB_NAME=task_management
-DB_HOST=localhost
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=sigma12345
-PORT=3000
+PORT=8080
 SECRET_KEY=123456
