--- a/Week-3/Day-2/task-management-api-totd/Dockerfile.dev
+++ b/Week-3/Day-2/task-management-api-totd/Dockerfile.dev
@@ -1,5 +1,5 @@
 # Base Environment
-FROM node:16
+FROM node:16.0.0-alpine
 # Set the working directory
 WORKDIR /app
 # Copy package files
@@ -10,7 +10,7 @@ RUN npm install
 COPY . .
 # ENV variables
 ENV DB_NAME task_management
-ENV DB_HOST localhost
+ENV DB_HOST host.docker.internal
 ENV DB_PORT 3306
 ENV DB_USER root
 ENV DB_PASSWORD sigma12345
@@ -19,4 +19,4 @@ ENV SECRET_KEY 123456
 # Expose port
 EXPOSE 8080
 # Command to start the application
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
