--- a/Week-3/Day-2/task-management-api-totd/Dockerfile.prod
+++ b/Week-3/Day-2/task-management-api-totd/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Base Environment
-FROM node:16
+FROM node:16.0.0-alpine
 # Set the working directory
 WORKDIR /app
 # Copy package files
@@ -10,13 +10,13 @@ RUN npm install
 COPY . .
 # ENV variables
 ENV DB_NAME task_management_prod
-ENV DB_HOST localhost
+ENV DB_HOST host.docker.internal
 ENV DB_PORT 3306
 ENV DB_USER root
 ENV DB_PASSWORD sigma12345
-ENV PORT 8080
+ENV PORT 3000
 ENV SECRET_KEY 74944dca-1521-4229-8b83-3d4c5283df18
 # Expose port
-EXPOSE 8080
+EXPOSE 3000
 # Command to start the application
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:prod"]
