--- a/Week-3/Day-2/task-management-api-totd/package.json
+++ b/Week-3/Day-2/task-management-api-totd/package.json
@@ -9,8 +9,8 @@
     "start:prod": "NODE_ENV=production node index.js",
     "build:dev": "docker build -t task-management-api-dev:1.0 -f Dockerfile.dev .",
     "build:prod": "docker build -t task-management-api-prod:1.0 -f Dockerfile.prod .",
-    "dev": "docker run -d --network host --name task-management-api-dev task-management-api-dev:1.0",
-    "prod": "docker run -d --network host --name task-management-api-prod task-management-api-prod:1.0",
+    "dev": "docker run -d -p 8080:8080 --name task-management-api-dev task-management-api-dev:1.0",
+    "prod": "docker run -d -p 3000:3000 --name task-management-api-prod task-management-api-prod:1.0",
     "clean:dev": "docker stop task-management-api-dev && docker rm task-management-api-dev",
     "clean:prod": "docker stop task-management-api-prod && docker rm task-management-api-prod"
   },
