--- a/Week-3/Day-2/task-management-api-totd/Dockerfile.dev
+++ b/Week-3/Day-2/task-management-api-totd/Dockerfile.dev
@@ -10,12 +10,13 @@ RUN npm install
 COPY . .
 # ENV variables
 ENV DB_NAME task_management
-ENV DB_HOST host.docker.internal
-ENV DB_PORT 3306
-ENV DB_USER root
-ENV DB_PASSWORD sigma12345
+ENV DB_HOST gateway01.ap-southeast-1.prod.aws.tidbcloud.com
+ENV DB_PORT 4000
+ENV DB_USER 23oDa4xLohasboU.root
+ENV DB_PASSWORD joFF4W4uQHEutz5v
 ENV PORT 8080
 ENV SECRET_KEY 123456
+ENV TLS true
 # Expose port
 EXPOSE 8080
 # Command to start the application
