--- a/Week-4/Day-3/twitter-clone-api-s3/Dockerfile.dev
+++ b/Week-4/Day-3/twitter-clone-api-s3/Dockerfile.dev
@@ -16,13 +16,13 @@ COPY . .
 # ENV variables
 ENV NODE_ENV development
 ENV DB_NAME twitter_clone_dev
-# Only for Linux based systems, use host.docker.internal for Windows and Mac based systems
-ENV DB_HOST 172.17.0.1
-ENV DB_PORT 3306
-ENV DB_USER root
-ENV DB_PASSWORD sigma12345
+ENV DB_HOST gateway01.ap-southeast-1.prod.aws.tidbcloud.com
+ENV DB_PORT 4000
+ENV DB_USER 23oDa4xLohasboU.root
+ENV DB_PASSWORD joFF4W4uQHEutz5v
 ENV PORT 8080
 ENV SECRET_KEY 123456
+ENV TLS true
 
 # Expose port
 EXPOSE 8080
